<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp">

        <ImageView
            android:id="@+id/imagenPeli"
            android:layout_width="81dp"
            android:layout_height="94dp"
            android:contentDescription="TODO"
            android:padding="10dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tituloPeli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/StringValueTituloPeli"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.115"
            app:layout_constraintStart_toEndOf="@+id/imagenPeli"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textAnio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/StringValueAnioPeli"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.111"
            app:layout_constraintStart_toEndOf="@+id/imagenPeli"
            app:layout_constraintTop_toBottomOf="@+id/tituloPeli" />

        <TextView
            android:id="@+id/textErrores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/StringValueErroersNum"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.271"
            app:layout_constraintStart_toEndOf="@+id/imagenPeli"
            app:layout_constraintTop_toBottomOf="@+id/textAnio"
            app:layout_constraintVertical_bias="0.644" />

        <ImageButton
            android:id="@+id/btnAgregarComentarios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/StringValueComentario"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textErrores"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.833"
            app:srcCompat="@drawable/ic_baseline_local_hospital_24"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
